--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -32,17 +32,9 @@
     }
 
     .slider-header h2 {
-      font-size: 1.5rem;
       font-weight: bold;
-      margin: 0;
+      margin: 20px 0px;
     }
-
-    .slider-header a {
-      font-size: 1rem;
-      text-decoration: none;
-      color: #007bff;
-    }
-
     /* Slider area */
     .slider-track {
       display: flex;
@@ -124,7 +116,7 @@
       <div class="brand-slider">
         <div class="slider-header">
           <h2>Shop with Brands</h2>
-          <a href="/collections/all">See More →</a>
+          <a class="button" href="/collections/all">See More →</a>
         </div>
         <div class="slider-container">
           <button class="arrow left">
