--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -118,7 +118,7 @@
           <h2>Shop with Brands</h2>
           <a class="button" href="/collections/all">See More →</a>
         </div>
-        <div class="slider-container">
+        <div class="slider-container isolate">
           <button class="arrow left">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6z"/></svg>
           </button>
