--- a/sections/support.liquid
+++ b/sections/support.liquid
@@ -82,6 +82,9 @@
         .divider {
             display: none;
         }
+        .feature-item img {
+        position: static;
+    }
     }
 </style>
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
