--- a/sections/long-banner.liquid
+++ b/sections/long-banner.liquid
@@ -15,7 +15,7 @@
 {%- endstyle -%}
 
 <div class="color-{{ section.settings.color_scheme }} gradient">
-  <div class="section-{{ section.id }}-padding">
+  <div class="section-{{ section.id }}-padding{% if section.settings.width %} page-width {% endif %}">
         <img style="object-fit: cover;object-position:{{section.settings.position}};margin-bottom: -8px;" width="100%" height="{{section.settings.height}}" src="{{section.settings.image | image_url }}" alt="">  
   </div>
 </div>
@@ -39,6 +39,11 @@
       "id": "height",
       "label": "Banner Height",
       "default": "300px"
+    },
+    {
+      "type": "checkbox",
+      "id": "width",
+      "label": "Enable Full Width"
     },
     {
       "type": "select",
