--- a/sections/long-banner.liquid
+++ b/sections/long-banner.liquid
@@ -43,7 +43,7 @@
     {
       "type": "checkbox",
       "id": "width",
-      "label": "Enable Full Width"
+      "label": "Enable Page Width"
     },
     {
       "type": "select",
