--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -13,7 +13,7 @@
   {%- endstyle -%}
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
-        <ul class="collection-item-slider ">
+        <ul class="product-slick-slider">
             {%- for product in section.settings.collection.products  -%}
             <li>
                 {% render 'card-product', card_product: product, %}
