--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -13,36 +13,17 @@
   {%- endstyle -%}
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
-        <div class="collection__title title-wrapper title-wrapper--no-top-margin page-width">
-            {%- if section.settings.title != blank -%}
-              <h2 class="title inline-richtext {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
-                {{ section.settings.title }}
-              </h2>
-              {%- if section.settings.show_view_all  -%}
-              <div class="center collection__view-all{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+        <h2>
+                {{section.settings.title}}
                 <a
-                  href="{{ section.settings.collection.url }}"
-                  class="{% if section.settings.view_all_style == 'link' %}link underlined-link{% elsif section.settings.view_all_style == 'solid' %}button{% else %}button button--secondary{% endif %}"
-                  aria-label="{{ 'sections.featured_collection.view_all_label' | t: collection_name: section.settings.collection.title | escape }}"
-                >
-                  {{ 'sections.featured_collection.view_all' | t }}
-                </a>
-              </div>
-            {%- endif -%}
-            {%- endif -%}
-            {%- if section.settings.description != blank
-              or section.settings.show_description
-              and section.settings.collection.description != empty
-            -%}
-              <div class="collection__description {{ section.settings.description_style }} rte{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
-                {%- if section.settings.show_description -%}
-                  {{ section.settings.collection.description }}
-                {%- else -%}
-                  {{ section.settings.description -}}
-                {%- endif %}
-              </div>
-            {%- endif -%}
-          </div>
+                href="{{ routes.collections_url }}"
+                id="ViewAll-{{ section.id }}"
+                class="link underlined-link large-up-hide{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+                aria-labelledby="ViewAll-{{ section.id }} SectionHeading-{{ section.id }}"
+              >
+                {{- 'sections.collection_list.view_all' | t -}}
+              </a>
+        </h2>
         <ul class="product-slick-slider grid product-grid contains-card contains-card--product">
             {%- for product in section.settings.collection.products  -%}
             <li class="grid__item">
@@ -59,77 +40,11 @@
     "tag": "section",
     "class": "section",
     "settings": [
-        {
+       {
       "type": "inline_richtext",
       "id": "title",
       "default": "t:sections.featured-collection.settings.title.default",
       "label": "t:sections.featured-collection.settings.title.label"
-    },
-    {
-      "type": "text",
-      "id": "date",
-      "label": "Select Date",
-      "default": "July 3, 2025 00:00:00",
-      "info":"M D, Y H:M:S"
-      },
-    {
-      "type": "select",
-      "id": "heading_size",
-      "options": [
-        {
-          "value": "h2",
-          "label": "t:sections.all.heading_size.options__1.label"
-        },
-        {
-          "value": "h1",
-          "label": "t:sections.all.heading_size.options__2.label"
-        },
-        {
-          "value": "h0",
-          "label": "t:sections.all.heading_size.options__3.label"
-        },
-        {
-          "value": "hxl",
-          "label": "t:sections.all.heading_size.options__4.label"
-        },
-        {
-          "value": "hxxl",
-          "label": "t:sections.all.heading_size.options__5.label"
-        }
-      ],
-      "default": "h1",
-      "label": "t:sections.all.heading_size.label"
-    },
-    {
-      "type": "richtext",
-      "id": "description",
-      "label": "t:sections.featured-collection.settings.description.label"
-    },
-    {
-      "type": "checkbox",
-      "id": "show_description",
-      "label": "t:sections.featured-collection.settings.show_description.label",
-      "default": false
-    },
-    {
-      "type": "select",
-      "id": "description_style",
-      "label": "t:sections.featured-collection.settings.description_style.label",
-      "options": [
-        {
-          "value": "body",
-          "label": "t:sections.featured-collection.settings.description_style.options__1.label"
-        },
-        {
-          "value": "subtitle",
-          "label": "t:sections.featured-collection.settings.description_style.options__2.label"
-        },
-        {
-          "value": "uppercase",
-          "label": "t:sections.featured-collection.settings.description_style.options__3.label"
-        }
-      ],
-      "default": "body"
     },
     {
       "type": "collection",
