--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -18,16 +18,14 @@
           class="collection-list-title inline-richtext {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
         >
           {{ section.settings.title }}
-        {%- if section.settings.show_view_all -%}
           <a
             href="{{ routes.collections_url }}"
             id="ViewAll-{{ section.id }}"
             class="link underlined-link large-up-hide{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
             aria-labelledby="ViewAll-{{ section.id }} SectionHeading-{{ section.id }}"
           >
-            {{- 'sections.collection_list.view_all' | t -}}
+            See More
           </a>
-        {%- endif -%}
         </h2>
         <ul class="product-slick-slider ">
             {%- for product in section.settings.collection.products  -%}
@@ -49,12 +47,6 @@
       "type": "collection",
       "id": "collection",
       "label": "t:sections.featured-collection.settings.collection.label"
-    },
-    {
-      "type": "checkbox",
-      "id": "show_view_all",
-      "default": false,
-      "label": "t:sections.collection-list.settings.show_view_all.label"
     },
     {
       "type": "inline_richtext",
