--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -18,18 +18,10 @@
           class="collection-list-title inline-richtext {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
         >
           {{ section.settings.title }}
-          <a
-            href="{{ routes.collections_url }}"
-            id="ViewAll-{{ section.id }}"
-            class="link underlined-link large-up-hide{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
-            aria-labelledby="ViewAll-{{ section.id }} SectionHeading-{{ section.id }}"
-          >
-            See More
-          </a>
         </h2>
         <ul class="product-slick-slider ">
             {%- for product in section.settings.collection.products  -%}
-            <li>
+            <li style="padding:20px;">
                 {% render 'card-product', card_product: product, %}
             </li>
             {% endfor %}
