--- a/assets/new-announcement-bar.css
+++ b/assets/new-announcement-bar.css
@@ -1,6 +1,9 @@
 .new-announcement-bar{
     border-bottom: 1px solid #d5d5d5;
   }
+.new-announcement-bar a{
+    color:rgb(var(--color-button-text)) ;
+  }
   .social-info-bar {
     display: flex;
     justify-content: space-between;
@@ -40,7 +43,6 @@
 
   .info a {
     text-decoration: none;
-    color: #000;
   }
 
   /* Icons */
