--- a/sections/header-new.liquid
+++ b/sections/header-new.liquid
@@ -924,6 +924,12 @@ $(document).ready(function(){
       "label": "t:sections.header.settings.margin_bottom.label",
       "default": 0
     }
-  ]
+  ],
+  
+"presets": [
+    {
+    "name": "New Header"
+    }
+]
 }
 {% endschema %}
