--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -2,7 +2,9 @@
     .section-{{ section.id }}-padding {
       padding-top: calc({{ section.settings.padding_top }}px * 0.75);
       padding-bottom: calc({{ section.settings.padding_bottom }}px  * 0.75);
+      overflow: hidden;
     }
+
   
     @media screen and (min-width: 750px) {
       .section-{{ section.id }}-padding {
