--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -584,6 +584,72 @@
       "id": "logo_position",
       "options": [
         {
+          "value": "middle-left",
+          "label": "t:sections.header.settings.logo_position.options__1.label"
+        }
+      ],
+      "default": "middle-left",
+      "label": "t:sections.header.settings.logo_position.label",
+      "info": "t:sections.header.settings.logo_position.info"
+    },
+    {
+      "type": "link_list",
+      "id": "left_menu",
+      "default": "main-menu",
+      "label": "Left menu"
+    },
+    {
+      "type": "link_list",
+      "id": "middle_menu",
+      "default": "main-menu",
+      "label": "Middle menu"
+    },
+    {
+      "type": "link_list",
+      "id": "right_menu",
+      "default": "main-menu",
+      "label": "Right menu"
+    },
+    {
+      "type": "link_list",
+      "id": "mobile_menu",
+      "default": "main-menu",
+      "label": "Mobile menu"
+    },
+     {
+      "type": "header",
+      "content": "Mobile Campaing"
+    },
+      {
+      "type": "text",
+      "id": "campaign_text",
+      "default": "Campaign",
+      "label": "Campaign Text",
+      "info" : "Campaign Text for mobile menu"
+    },
+     {
+      "type": "url",
+      "id": "campaign_url",
+      "label": "Campaign url"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_line_separator",
+      "default": true,
+      "label": "t:sections.header.settings.show_line_separator.label"
+    },
+    {
+      "type": "checkbox",
+      "id": "enable_sticky_header",
+      "default": true,
+      "label": "t:sections.header.settings.enable_sticky_header.label",
+      "info": "t:sections.header.settings.enable_sticky_header.info"
+    },
+    {
+      "type": "select",
+      "id": "logo_position",
+      "options": [
+        {
           "value": "top-left",
           "label": "t:sections.header.settings.logo_position.options__2.label"
         },
