--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -47,7 +47,7 @@
             <a style="float: right;"
               href="{{ section.settings.collection.url }}"
             >
-              See More
+            See More →
             </a>
         </h2>
         <ul class="product-slick-slider ">
