--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -48,11 +48,11 @@
           <span id="countdown-{{ section.id }}"></span>
         {% endif %}
           {{ section.settings.title }} 
-            <a style="float: right;"
+            {% comment %} <a style="float: right;"
               href="{{ section.settings.collection.url }}"
             >
             See More →
-            </a>
+            </a> {% endcomment %}
         </h2>
         <ul class="product-slick-slider ">
             {%- for product in section.settings.collection.products  -%}
