--- a/sections/countdown.liquid
+++ b/sections/countdown.liquid
@@ -193,7 +193,7 @@ const countdown2Function = setInterval(() => {
 
 {% schema %}
 {
-"name": "countdown2",
+"name": "countdown",
 "tag": "section",
 "class": "section",
   "settings": [
@@ -278,7 +278,7 @@ const countdown2Function = setInterval(() => {
 
 "presets": [
     {
-    "name": "countdown2"
+    "name": "countdown"
     }
 ]
 }
