--- a/sections/countdown.liquid
+++ b/sections/countdown.liquid
@@ -47,8 +47,8 @@
     border-radius: 4px;
 }
 
-/* countdown2 time2r styling */
-.countdown2 {
+/* Countdown timer styling */
+.countdown {
     display: flex;
     align-items: center;
     font-size: 24px;
@@ -56,7 +56,7 @@
     color: rgb(var(--color-button));
 }
 
-.time2 {
+.time {
     padding: 10px 20px;
     background-color: rgb(var(--color-button-text));
     border-radius: 4px;
@@ -93,8 +93,8 @@
     .offer-section {
         display: block
     }
-    /* countdown2 time2r styling */
-    .countdown2 {
+    /* Countdown timer styling */
+    .countdown {
         gap: 5px;
     }
     .offer-details {
@@ -104,7 +104,7 @@
     .offer-details p{
         text-align: center;
     }
-  .time2 {
+  .time {
 	padding: 10px 15px;
 }
     
@@ -125,7 +125,7 @@
   }
 {%- endstyle -%}
 
-<div id="countdown2" class="color-{{ section.settings.color_scheme }} gradient isolate">
+<div id="countdown" class="color-{{ section.settings.color_scheme }} gradient isolate">
   <div class="section-{{ section.id }}-padding page-width">
      <!-- Main container for the offer section -->
      <div class="offer-section">
@@ -141,15 +141,15 @@
           </div>
           <h1>{{ section.settings.heading }}</h1>
           <p>{{ section.settings.subtext }}</p>
-          <!-- countdown2 time2r -->
-          <div class="countdown2">
-              <div class="time2" id="days2">00</div>
+          <!-- Countdown timer -->
+          <div class="countdown">
+              <div class="time" id="days">00</div>
               <div class="separator">:</div>
-              <div class="time2" id="hours2">00</div>
+              <div class="time" id="hours">00</div>
               <div class="separator">:</div>
-              <div class="time2" id="minutes2">00</div>
+              <div class="time" id="minutes">00</div>
               <div class="separator">:</div>
-              <div class="time2" id="seconds2">00</div>
+              <div class="time" id="seconds">00</div>
           </div>
           <!-- Call to action button -->
           <a href="{{section.settings.button_link}}" class="btn btn-primary mt-20">{{section.settings.button_label}}</a>
@@ -161,39 +161,39 @@
 <!-- External JavaScript (script.js) -->
 <script>
 // Set the date we're counting down to
-const countdown2Date = new Date("{{section.settings.date}}").getTime();
+const countDownDate = new Date("{{section.settings.date}}").getTime();
 
 // Update the count down every 1 second
-const countdown2Function = setInterval(() => {
-    // Get today's date and time2
+const countdownFunction = setInterval(() => {
+    // Get today's date and time
     const now = new Date().getTime();
 
     // Find the distance between now and the count down date
-    const distance = countdown2Date - now;
+    const distance = countDownDate - now;
 
-    // time2 calculations for days2, hours2, minutes2 and seconds2
-    const days2 = Math.floor(distance / (1000 * 60 * 60 * 24));
-    const hours2 = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    const minutes2 = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    const seconds2 = Math.floor((distance % (1000 * 60)) / 1000);
+    // Time calculations for days, hours, minutes and seconds
+    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
     // Display the result in the element with id
-    document.getElementById("days2").innerText = String(days2).padStart(2, '0');
-    document.getElementById("hours2").innerText = String(hours2).padStart(2, '0');
-    document.getElementById("minutes2").innerText = String(minutes2).padStart(2, '0');
-    document.getElementById("seconds2").innerText = String(seconds2).padStart(2, '0');
+    document.getElementById("days").innerText = String(days).padStart(2, '0');
+    document.getElementById("hours").innerText = String(hours).padStart(2, '0');
+    document.getElementById("minutes").innerText = String(minutes).padStart(2, '0');
+    document.getElementById("seconds").innerText = String(seconds).padStart(2, '0');
 
     // If the count down is over, write some text
     if (distance < 0) {
-        clearInterval(countdown2Function);
-        document.querySelector(".countdown2").innerHTML = "EXPIRED";
+        clearInterval(countdownFunction);
+        document.querySelector(".countdown").innerHTML = "EXPIRED";
     }
 }, 1000);
 </script>
 
 {% schema %}
 {
-"name": "countdown",
+"name": "Countdown",
 "tag": "section",
 "class": "section",
   "settings": [
@@ -278,7 +278,7 @@ const countdown2Function = setInterval(() => {
 
 "presets": [
     {
-    "name": "countdown"
+    "name": "Countdown"
     }
 ]
 }
